# the-night-key

./: .editorconfig  .gitattributes  .gitignore  BOOK.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  RELEASE.md  SECURITY.md  SUPPORT.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: verify.yml
docs/: authoring.md  commands.md  sharing.md  troubleshooting.md
expected_transcripts/: night_key_seed.txt
game_content/: scenes.yaml
manuscript/: 00_outline.md  01_blueprint.md
replays/: day1_connected.script  day1_humor.script  night_key_seed.script
scripts/: build_packs.py  check_night_key.ps1  check_night_key.sh  check_pack_and_replay.ps1  check_pack_and_replay.sh  play.ps1  play.sh  verify.ps1  verify.sh
src/btg/: __init__.py  cli.py  engine.py  gallery.py  init_story.py  lint.py  pack.py  py.typed  replay.py  savegame.py  state.py
stories/bereavement_day1/: README.md  scenes.yaml
stories/starter/: README.md  scenes.yaml
stories/the-night-key/: README.md  scenes.yaml
stories/the-night-key/scenes/: act1.yaml  act2.yaml
tests/: conftest.py  test_cli_list_stories.py  test_cli_positional_scenes.py  test_engine_determinism.py  test_flag_aliases.py  test_gallery.py  test_includes.py  test_init_story.py  test_lint.py  test_pack.py  test_pack_includes.py  test_pack_load_includes.py  test_pack_verify.py  test_packaged_scenes.py  test_replay.py  test_savegame.py  test_scene_schema.py  test_state_gating.py  test_templating.py  test_yaml_parse_error.py
